Started work on front end functions.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,15 +15,13 @@
       <header class="nav">
         <div class="container">
           <div class="nav-left">
-            <a href="" class="nav-item">Briefly</a>
+            <a href="" class="nav-item is-size-3">Briefly</a>
           </div>
           <div class="nav-right">
-            <a href="" class="nav-item">Home</a>
-            <a href="" class="nav-item">Random</a>
             <span class="nav-item">
                 <a href="" class="button is-success is-inverted">
                   <span class="icon"><i class="fa fa-github"></i></span>
-                  <span>GitHub</span>
+                  <span>Source on GitHub</span>
                 </a>
             </span>
           </div>
