Correction to base template.  Fiddling with DB in deployment.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,7 @@
           </div>
           <div class="nav-right">
             <span class="nav-item">
-                <a href="" class="button is-success is-inverted">
+                <a href="https://github.com/Kalenai/url-shortener" class="button is-success is-inverted">
                   <span class="icon"><i class="fa fa-github"></i></span>
                   <span>Source on GitHub</span>
                 </a>
